--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,11 @@
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/devcontainers/features/go:1": {},
     "ghcr.io/zeiss/devcontainer-features/air:1": {},
-    "ghcr.io/devcontainers/features/github-cli:1": {}
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
+    "ghcr.io/jckimble/devcontainer-features/ngrok:3": {},
+    "ghcr.io/dhoeric/features/k9s:1": {},
+    "ghcr.io/mpriscella/features/kind:1": {}
   },
   "customizations": {
     "vscode": {
